syntax = "proto3";

// TCG Event structure, representing a single event in a log
message TCGEvent {
  uint32 recnum = 1;              // Record number
  uint32 pcr_index = 2;           // PCR index (which PCR is extended)
  bytes digest = 3;               // Digest value (SHA-256)
  string event_content = 4;       // Informative event content (description, data)
}

// TCG Event Log structure, which can now contain an arbitrary number of events
message TCGEventLog {
  repeated TCGEvent events = 1;   // Dynamic array of events
}

message AttestationRequest {
  string verifier_id = 1;          // ID of the verifier
  bytes nonce = 2;                 // Random nonce generated by the verifier
}

message PCR {
  int32 index = 1;                 // PCR index
  bytes value = 2;                 // PCR value (SHA-256 digest)
}

message AttestationResponse {
  string attestor_id = 1;           // ID of the attestor
  repeated PCR pcrs = 2;            // List of PCR values from the attestor
  TCGEventLog event_log = 3;        // Event log containing a dynamic array of events
  bytes nonce = 4;                  // Nonce sent back to the verifier for verification
}